# sunima-evm

./: .gitignore  README.md  flake.nix  go.mod  go.sum
cmd/tfhe-smoke/: main.go
cmd/tfhe-tool/: main.go
internal/tfhebridge/: bridge.go
internal/tfhebridge/rust/: Cargo.toml
internal/tfhebridge/rust/src/: lib.rs
proto/: buf.gen.gogo.yaml  buf.yaml
proto/sunima/tfhe/v1/: genesis.proto  query.proto  tfhe.proto  tx.proto
scripts/: sync-cosmos-evm.sh
x/tfhe/: README.md  genesis.go  module.go
x/tfhe/keeper/: grpc_query.go  keeper.go  keeper_test.go  msg_server.go  store.go
x/tfhe/types/: codec.go  errors.go  genesis.pb.go  genesis_helpers.go  keys.go  msgs.go  query.pb.go  tfhe.pb.go  tx.pb.go
